--- a/character.html
+++ b/character.html
@@ -1,7 +1,10 @@
+
 <div class="Character">
    
+  
    
-   <img class="Character_spritesheet" src="https://raw.githubusercontent.com/gabriela5rova/Java-Advanced-SoftUni-May-2023/main/output-onlinepngtools.png" alt="Character" />
+   <img class="Character_spritesheet pixelart face-down" 
+      src="https://raw.githubusercontent.com/gabriela5rova/SpriteSheetAnimation/main/Walk.png" alt="Character" />
    
    
 </div>
